--- a/src/components/LoginForm.css
+++ b/src/components/LoginForm.css
@@ -1,3 +1,13 @@
+.center{
+    font-family: 'Raleway', sans-serif;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .login-form {
   max-width: 300px;
 }
