--- a/src/features/dashboard/Dashboard.css
+++ b/src/features/dashboard/Dashboard.css
@@ -6,7 +6,48 @@
   width: 100%;
 }
 
-.ant-layout-sider-trigger {
-  background: #fff;
-  color: #002140;
+.ant-layout-header {
+  /*box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1)*/
 }
+
+.ant-layout-sider-children {
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1)
+}
+
+.ant-layout-header .trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color .3s;
+}
+
+.ant-layout-header .trigger:hover {
+  /*color: #1890ff;*/
+  background: #e6f7ff;
+}
+
+.ant-layout-header .search {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color .3s;
+}
+
+.ant-layout-header .search:hover {
+  color: #1890ff;
+}
+
+.ant-layout-header .logo {
+  height: 32px;
+  background: rgba(255,255,255,.2);
+  margin: 16px;
+}
+
+
+
+.ant-layout-header .owner-dropdown:hover {
+  background: #e6f7ff;
+}
+
