--- a/src/features/landing/Landing.css
+++ b/src/features/landing/Landing.css
@@ -1,9 +1,12 @@
+header {
+  position: absolute;
+  top: 0;
+}
 
-.container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+section {
+  padding: 50px 0;
+  background-color: #F3F5FB;
+  text-align: center;
 }
 
 #logo {
