--- a/src/features/landing/Landing.css
+++ b/src/features/landing/Landing.css
@@ -25,12 +25,11 @@
 }
 
 .nav-link {
-	font-size: 19px;
+	font-size: 17px;
 	line-height: 44px;
 	text-decoration: none;
 	color: inherit;
-	display: inline-block;
-	margin: 0 15px
+	margin: auto 15px;
 }
 
 .logo img {
@@ -1824,6 +1823,27 @@ img {
 }
 
 
+#footer {
+  padding: 20px 0 20px 0;
+}
+
+#footer ul li a {
+  font-size: 16px;
+}
+
+#footer ul li {
+  margin: 4px 0;
+}
+
+ul {
+  list-style-type: none;
+}
+
+@media (max-width:820px) {
+  footer .footer-col {
+    text-align: center
+  }
+}
 
 
 #dillion-img {
