--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,9 @@
 .ant-table-row:hover {
   cursor: pointer;
 }
+
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
